--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   convex_bottom_bar: ^3.0.0
   flutter_switch: ^0.3.2
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
